added router for product page and product details

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -1,6 +1,9 @@
 body {
   font-family: 'Raleway', sans-serif;
 }
+link:hover {
+  text-decoration: none;
+}
 .headerContainer {
   background-color: rgb(255, 217, 0);
 }
