--- a/server/public/style.css
+++ b/server/public/style.css
@@ -1,8 +1,12 @@
 body {
   font-family: 'Raleway', sans-serif;
 }
-link:hover {
+a {
+  color: inherit;
+}
+a:hover {
   text-decoration: none;
+  color: inherit;
 }
 .headerContainer {
   background-color: rgb(255, 217, 0);
