--- a/server/public/style.css
+++ b/server/public/style.css
@@ -84,3 +84,7 @@ a:hover {
 .item-card:hover .details-button-container{
   display: flex;
 }
+.cart-item-img {
+  max-width: 100%;
+  max-height: 100%;
+}
