added text overflow ellipses to item name when browser is narrow

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -87,6 +87,11 @@ a:hover {
 .cart-item-container {
   height: 180px;
 }
+.item-name {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .cart-item-img {
   max-width: 100%;
   max-height: 150px;
