removed quickview from product list

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -17,8 +17,8 @@ a:hover {
 .featuredItems, .carouselImage {
   height: 300px;
 }
-.itemPrice {
-  font-family: 'Open Sans', sans-serif;
+.item-price {
+  font-family: 'Montserrat', sans-serif;
 }
 .quick-look-thumbnail-container{
   scroll-snap-type: x mandatory;
