added click handler to thumbnails to change displayed img

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -109,7 +109,7 @@ a:hover {
   cursor: pointer;
   opacity: .6;
 }
-.thumbnail > img, .product-img-container > img {
+.thumbnail > img, .product-img-container > img, .item-image {
   max-width: 100%;
   max-height: 100%;
 }
