--- a/server/public/style.css
+++ b/server/public/style.css
@@ -57,6 +57,18 @@ a, a:hover {
   background-color: rgba(162, 161, 161, 0.2);
   z-index: 1;
 }
+.productImg, .productDetailsImgContainer > img, .thumbnail > img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.thumbnail {
+  width: 70px;
+  height: 70px;
+}
+.thumbnail:hover {
+  cursor: pointer;
+  opacity: .6;
+}
 .quick-look-modal-container{
   background-color: rgba(0, 0, 0, 0.331);
   z-index: 2;
@@ -86,18 +98,6 @@ a, a:hover {
 .productImgContainer:hover, .cart-item-img:hover {
   opacity: .7;
 }
-.item-name-container:hover, .cart-item-name:hover {
+.productNameContainer:hover, .cart-item-name:hover {
   color: gray;
-}
-.thumbnail {
-  width: 70px;
-  height: 70px;
-}
-.thumbnail:hover {
-  cursor: pointer;
-  opacity: .6;
-}
-.thumbnail > img, .product-img-container > img, .item-image {
-  max-width: 100%;
-  max-height: 100%;
 }
