--- a/server/public/style.css
+++ b/server/public/style.css
@@ -14,6 +14,9 @@ a, a:hover {
 .carouselItem {
   height: 400px;
 }
+.carouselCaption {
+  background-color: rgba(128, 128, 128, 0.7);
+}
 .productContainer {
   height: 400px;
 }
