--- a/client/components/styles/thumbnail-carousel.css
+++ b/client/components/styles/thumbnail-carousel.css
@@ -14,6 +14,10 @@
   cursor: pointer;
   opacity: .6;
 }
+.thumbnailNav {
+  min-height: 296px;
+  max-height: 296px;
+}
 .thumbnail > img {
   max-width: 80px;
   max-height: 60px;
