--- a/client/components/styles/thumbnail-carousel.css
+++ b/client/components/styles/thumbnail-carousel.css
@@ -2,6 +2,9 @@
   min-width: 84px;
   max-width: 84px;
 }
+.thumbnailScrollable {
+  transition: transform .3s ease-in;
+}
 .thumbnail {
   min-width: 84px;
   max-width: 84px;
