--- a/client/components/styles/checkout.css
+++ b/client/components/styles/checkout.css
@@ -1,3 +1,8 @@
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 .checkoutCartItemImgContainer {
   min-height: 90px;
   max-height: 90px;
