--- a/client/components/styles/checkout.css
+++ b/client/components/styles/checkout.css
@@ -7,7 +7,7 @@ input[type=number]::-webkit-outer-spin-button {
   min-height: 90px;
   max-height: 90px;
   min-width: 120px;
-  max-height: 120px;
+  max-width: 120px;
 }
 .checkoutCartItemImg {
   max-width: 120px;
