moved css styling to seperate css files that are imported to corresponding component

--- a/client/components/styles/product-list.css
+++ b/client/components/styles/product-list.css
@@ -1,3 +1,6 @@
-.productListContainer .productContainer:hover {
-  border: 1px solid #007bff !important;
+.productContainer {
+  height: 400px;
+}
+.productImgContainer {
+  height: 60%;
 }
