--- a/client/components/styles/delete-confirm.css
+++ b/client/components/styles/delete-confirm.css
@@ -1,4 +1,11 @@
-.delete-confirm-background {
+.deleteConfirmBackground {
   top: 0;
   left: 0;
+}
+.deleteConfirmImgContainer {
+  height: 400px;
+}
+.deleteConfirmImg {
+  max-height: 100%;
+  max-width: 100%;
 }
