--- a/server/public/style.css
+++ b/server/public/style.css
@@ -27,7 +27,10 @@ a, a:hover {
 .shoppingCartContainer, .cartTotal{
   font-size: 2rem;
 }
-.productImg, .thumbnail > img, .cartItemImg {
+.productDetailsImgInfoContainer {
+  height: 380px;
+}
+.productImg, .thumbnail > img,.productDetailsImg, .cartItemImg {
   max-width: 100%;
   max-height: 100%;
 }
