--- a/client/components/styles/header.css
+++ b/client/components/styles/header.css
@@ -4,3 +4,11 @@
 .shoppingCartImage {
   height: 30px;
 }
+.headerLogo {
+  height: 40px;
+  width: 40px;
+}
+.headerLogoImg {
+  max-height: 40px;
+  max-width: 40px;
+}
