made header smaller and added icons for lego theme

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -24,7 +24,7 @@ a, a:hover {
 .shoppingCartContainer{
   cursor: pointer;
 }
-.shoppingCartContainer, .cartTotal{
+.cartTotal{
   font-size: 2rem;
 }
 .productDetailsImgInfoContainer {
