--- a/client/components/styles/header.css
+++ b/client/components/styles/header.css
@@ -1,8 +1,11 @@
 .headerContainer {
   background: #ffc107;
 }
+.shoppingCartContainer {
+  font-size: 1.5rem;
+}
 .shoppingCartImage {
-  height: 30px;
+  height: 35px;
 }
 .headerLogo {
   height: 40px;
