--- a/server/public/style.css
+++ b/server/public/style.css
@@ -30,14 +30,14 @@ a, a:hover {
 .productDetailsImgInfoContainer {
   height: 380px;
 }
-.productImg, .thumbnail > img,.productDetailsImg, .cartItemImg {
+.productImg, .thumbnail > img,.productDetailsImg, .cartItemImg, .orderItemImg {
   max-width: 100%;
   max-height: 100%;
 }
 .productImg:hover, .cartItemImg:hover {
   opacity: .7;
 }
-.cartItemContainer {
+.cartItemContainer, .orderItemContainer {
   height: 150px;
 }
 .qty {
