--- a/server/public/style.css
+++ b/server/public/style.css
@@ -25,6 +25,10 @@ a, a:hover {
 .shoppingCartContainer{
   cursor: pointer;
 }
+.productDetailsImgContainer {
+  max-height: 400px;
+  min-height: 400px;
+}
 .productImg, .thumbnail > img,.productDetailsImg, .cartItemImg, .orderItemImg {
   max-width: 100%;
   max-height: 100%;
